[package]
name = "spudboy"
version = "0.1.0"
authors = ["jbonwick <jack@bonwick.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.tokio]
version = "1.0"

[dependencies.serenity]
version = "0.10.5"
default-features = false
features = ["client", "gateway", "rustls_backend", "model"]